# changeset

./: flake.nix
.github/workflows/: ci.yaml
changeset/: CHANGELOG.md  changeset.cabal
changeset-containers/: CHANGELOG.md  changeset-containers.cabal
changeset-containers/src/Data/Monoid/RightAction/: IntMap.hs  IntSet.hs  Map.hs  Sequence.hs  Set.hs
changeset-containers/test/: Main.hs  Sequence.hs
changeset-fused-effects/: CHANGELOG.md  changeset-fused-effects.cabal
changeset-fused-effects/src/Control/Effect/: Changeset.hs
changeset-fused-effects/test/: Main.hs
changeset-lens/: CHANGELOG.md  changeset-lens.cabal
changeset-lens/src/Control/Monad/Changeset/: Lens.hs
changeset-lens/src/Control/Monad/Changeset/Lens/: At.hs  Ixed.hs  Setter.hs
changeset-reflex/: changeset-reflex.cabal
changeset-reflex/src/Control/Monad/Changeset/: Reflex.hs
changeset-time/: CHANGELOG.md  changeset-time.cabal
changeset-time/src/Data/Monoid/RightAction/Time/: Orphans.hs
changeset/examples/Control/Monad/Trans/Changeset/: Examples.hs
changeset/src/Control/Monad/Changeset/: Class.hs
changeset/src/Control/Monad/Trans/: Changeset.hs
changeset/src/Data/Monoid/: RightAction.hs
changeset/src/Data/Monoid/RightAction/: Coproduct.hs  Generic.hs
changeset/test/: Main.hs
